<resources>
    <string name="app_name">Hillforts</string>
    <string name="archaeological_fieldwork">Archaeological Fieldwork</string>
    <string name="hint_hillfortName">Hillfort Name</string>
    <string name="hint_hillfortDescription">Hillfort Description</string>
    <string name="menu_addHillfort">Add Hillfort</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="enter_hillfort_name"> Please enter a Hillfort name </string>
    <string name="save_hillfort"> Save Hillfort</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="change_hillfort_image">Change Hillfort Image</string>
    <string name="add_four_hillfort_image">Add Another Image</string>
    <string name="max_hillfort_images">Maximum Images Added</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="hillfort_name">Hillfort Name</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="visited_checkbox">Visted Hillfort</string>
    <string name="button_delete_image">Delete Image</string>
    <string name="heading_hillfort_name">New Hillfort</string>
    <string name="menu_hillfort_image">Hillfort Image</string>
    <string name="title_activity_login">AuthenticationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="menu_logout">Logout</string>
<<<<<<< HEAD

=======
    <string name="notes_input">Hillfort Notes</string>
    <string name="date_created">Date Created: </string>
    <string name="menu_settings">Settings</string>
    <string name="settings_heading">User Settings</string>
    <string name="hint_userName">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_save_user_settings">Save User Settings</string>
    <string name="menu_updateSettings">Update</string>
    <string name="menu_cancelSettings">Cancel</string>
    <string name="menu_deleteUser">Delete Account</string>
    <string name="button_delete_user">Delete User</string>
    <string name="item_delete_all_hillforts">Delete All</string>
    <string name ="statistics_heading">Statistics</string>
    <string name ="statistics_user_heading">Your Hillfort Statistics</string>
    <string name ="statistics_hillforts_total">Total: </string>
    <string name ="statistics_hillforts_viewed">Total Viewed: </string>
    <string name ="statistics_hillforts_unseen">Total Unseen: </string>
    <string name ="statistics_class_avg_heading">Your Class Average Statistics</string>
    <string name = "statistics_class_avg_total_hillforts">Average Hillforts Total: </string>
    <string name ="statistics_class_viewed">Average Hillforts Viewed: </string>
    <string name ="statistics_class_unseen">Average Hillforts Unseen: </string>
    <string name="statistics_position">You are above/below average</string>
    <string name="hillfort_lat">Location Lat</string>
    <string name="hillfort_lng">Location Lng</string>
>>>>>>> release/0.1.3
</resources>